force-app/main/default/objects/HDT_Generic_Record_Selection__mdt/HDT_Generic_Record_Selection__mdt.object-meta.xml
<CustomObject>
    <label>HDT Generic Record Selection</label>
    <pluralLabel>HDT Generic Records Selection</pluralLabel>
</CustomObject>