force-app/main/default/objects/HDT_Generic_Record_Selection__mdt/fields/Default_Search_Key__c.field-meta.xml
<CustomField>
    <fullName>Default_Search_Key__c</fullName>
    <label>Default Search Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>