force-app/main/default/objects/HDT_Generic_Record_Selection__mdt/fields/Fields__c.field-meta.xml
<CustomField>
    <fullName>Fields__c</fullName>
    <description>Id is quered by default, don&apos;t include here.</description>
    <inlineHelpText>Id is quered by default, don&apos;t include here.</inlineHelpText>
    <label>Fields</label>
    <length>255</length>
    <type>Text</type>
</CustomField>