force-app/main/default/objects/HDT_Generic_Record_Selection__mdt/fields/Query_Type__c.field-meta.xml
<CustomField>
    <fullName>Query_Type__c</fullName>
    <defaultValue>&apos;SOSL&apos;</defaultValue>
    <label>Query Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SOSL</fullName>
                <default>true</default>
                <label>SOSL</label>
            </value>
            <value>
                <fullName>SOQL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>