force-app/main/default/objects/HDT_Generic_Record_Selection__mdt/fields/Row_Limit__c.field-meta.xml
<CustomField>
    <fullName>Row_Limit__c</fullName>
    <label>Row Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>