force-app/main/default/objects/HDT_Generic_Record_Selection__mdt/fields/Where_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Where_Conditions__c</fullName>
    <label>Where Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>